--- a/html/post2.html
+++ b/html/post2.html
@@ -87,65 +87,65 @@
           <ul class="playlistFriends">
             <li class="playlistFriends-item">
               <a href="#">
-                <img src="src/images/covers/echame-la-culpa.jpg" alt="echame la culpa" />
+                <img src="../images/av1.jpg" alt="echame la culpa" />
                 <span>
-                  Luis Fonsi
+                  Avengers
                 </span>
               </a>
             </li>
             <li class="playlistFriends-item">
               <a href="#">
-                <img src="src/images/covers/echame-la-culpa.jpg" alt="echame la culpa" />
+                <img src="../images/av2.jpg" alt="echame la culpa" />
                 <span>
-                  Leonidas Esteban
+                  Avengers
                 </span>
               </a>
             </li>
             <li class="playlistFriends-item">
               <a href="#">
-                <img src="src/images/covers/echame-la-culpa.jpg" alt="echame la culpa" />
+                <img src="../images/av1.jpg" alt="echame la culpa" />
                 <span>
-                  Luis Fonsi
+                  Avengers
                 </span>
               </a>
             </li>
             <li class="playlistFriends-item">
               <a href="#">
-                <img src="src/images/covers/echame-la-culpa.jpg" alt="echame la culpa" />
+                <img src="../images/av2.jpg" alt="echame la culpa" />
                 <span>
-                  Leonidas Esteban
+                 Avengers
                 </span>
               </a>
             </li>
             <li class="playlistFriends-item">
               <a href="#">
-                <img src="src/images/covers/echame-la-culpa.jpg" alt="echame la culpa" />
+                <img src="../images/av1.jpg" alt="echame la culpa" />
                 <span>
-                  Luis Fonsi
+                  Avengers
                 </span>
               </a>
             </li>
             <li class="playlistFriends-item">
               <a href="#">
-                <img src="src/images/covers/echame-la-culpa.jpg" alt="echame la culpa" />
+                <img src="../images/av2.jpg" alt="echame la culpa" />
                 <span>
-                  Leonidas Esteban
+                  Avengers
                 </span>
               </a>
             </li>
             <li class="playlistFriends-item">
               <a href="#">
-                <img src="src/images/covers/echame-la-culpa.jpg" alt="echame la culpa" />
+                <img src="../images/av1.jpg" alt="echame la culpa" />
                 <span>
-                  Luis Fonsi
+                  Avengers
                 </span>
               </a>
             </li>
             <li class="playlistFriends-item">
               <a href="#">
-                <img src="src/images/covers/echame-la-culpa.jpg" alt="echame la culpa" />
+                <img src="../images/av2.jpg" alt="echame la culpa" />
                 <span>
-                  Leonidas Esteban
+                  Avengers
                 </span>
               </a>
             </li>
@@ -164,7 +164,7 @@
         <div class="primary-user">
           <div class="user">
             <p>
-              <img src="src/images/covers/gorillaz.jpg" alt=""/>
+              <img src="../images/av2.jpg" alt=""/>
               <span>Leonidas Esteban</span>
             </p>
           </div>
@@ -188,7 +188,7 @@
             <div class="primaryPlaylist-list">
               <div class="primaryPlaylistItem">
                 <div class="primaryPlaylistItem-image">
-                  <img src="src/images/covers/midnight.jpg" alt="">
+                  <img src="../images/av1.jpg" alt="">
                 </div>
                 <h4 class="primaryPlaylistItem-title">
                   Midnight city
@@ -196,7 +196,7 @@
               </div>
               <div class="primaryPlaylistItem">
                 <div class="primaryPlaylistItem-image">
-                  <img src="src/images/covers/midnight.jpg" alt="">
+                  <img src="../images/av2.jpg" alt="">
                 </div>
                 <h4 class="primaryPlaylistItem-title">
                   Midnight city
@@ -204,7 +204,7 @@
               </div>
               <div class="primaryPlaylistItem">
                 <div class="primaryPlaylistItem-image">
-                  <img src="src/images/covers/midnight.jpg" alt="">
+                  <img src="../images/av1.jpg" alt="">
                 </div>
                 <h4 class="primaryPlaylistItem-title">
                   Midnight city
@@ -212,7 +212,7 @@
               </div>
               <div class="primaryPlaylistItem">
                 <div class="primaryPlaylistItem-image">
-                  <img src="src/images/covers/midnight.jpg" alt="">
+                  <img src="../images/av2.jpg" alt="">
                 </div>
                 <h4 class="primaryPlaylistItem-title">
                   Midnight city
@@ -220,7 +220,7 @@
               </div>
               <div class="primaryPlaylistItem">
                 <div class="primaryPlaylistItem-image">
-                  <img src="src/images/covers/midnight.jpg" alt="">
+                  <img src="../images/av1.jpg" alt="">
                 </div>
                 <h4 class="primaryPlaylistItem-title">
                   Midnight city
@@ -228,7 +228,7 @@
               </div>
               <div class="primaryPlaylistItem">
                 <div class="primaryPlaylistItem-image">
-                  <img src="src/images/covers/midnight.jpg" alt="">
+                  <img src="../images/av2.jpg" alt="">
                 </div>
                 <h4 class="primaryPlaylistItem-title">
                   Midnight city
@@ -236,69 +236,7 @@
               </div>
               <div class="primaryPlaylistItem">
                 <div class="primaryPlaylistItem-image">
-                  <img src="src/images/covers/midnight.jpg" alt="">
-                </div>
-                <h4 class="primaryPlaylistItem-title">
-                  Midnight city
-                </h4>
-              </div>
-            </div>
-          </div>
-          <div class="primaryPlaylist">
-            <h3 class="primaryPlaylist-topic">Lo mejor de la semana</h3>
-            <h2 class="primaryPlaylist-title">Destacados</h2>
-            <div class="primaryPlaylist-list">
-              <div class="primaryPlaylistItem">
-                <div class="primaryPlaylistItem-image">
-                  <img src="src/images/covers/midnight.jpg" alt="">
-                </div>
-                <h4 class="primaryPlaylistItem-title">
-                  Midnight city
-                </h4>
-              </div>
-              <div class="primaryPlaylistItem">
-                <div class="primaryPlaylistItem-image">
-                  <img src="src/images/covers/midnight.jpg" alt="">
-                </div>
-                <h4 class="primaryPlaylistItem-title">
-                  Midnight city
-                </h4>
-              </div>
-              <div class="primaryPlaylistItem">
-                <div class="primaryPlaylistItem-image">
-                  <img src="src/images/covers/midnight.jpg" alt="">
-                </div>
-                <h4 class="primaryPlaylistItem-title">
-                  Midnight city
-                </h4>
-              </div>
-              <div class="primaryPlaylistItem">
-                <div class="primaryPlaylistItem-image">
-                  <img src="src/images/covers/midnight.jpg" alt="">
-                </div>
-                <h4 class="primaryPlaylistItem-title">
-                  Midnight city
-                </h4>
-              </div>
-              <div class="primaryPlaylistItem">
-                <div class="primaryPlaylistItem-image">
-                  <img src="src/images/covers/midnight.jpg" alt="">
-                </div>
-                <h4 class="primaryPlaylistItem-title">
-                  Midnight city
-                </h4>
-              </div>
-              <div class="primaryPlaylistItem">
-                <div class="primaryPlaylistItem-image">
-                  <img src="src/images/covers/midnight.jpg" alt="">
-                </div>
-                <h4 class="primaryPlaylistItem-title">
-                  Midnight city
-                </h4>
-              </div>
-              <div class="primaryPlaylistItem">
-                <div class="primaryPlaylistItem-image">
-                  <img src="src/images/covers/midnight.jpg" alt="">
+                  <img src="../images/av1.jpg" alt="">
                 </div>
                 <h4 class="primaryPlaylistItem-title">
                   Midnight city
@@ -312,7 +250,7 @@
             <div class="primaryPlaylist-list">
               <div class="primaryPlaylistItem">
                 <div class="primaryPlaylistItem-image">
-                  <img src="src/images/covers/midnight.jpg" alt="">
+                  <img src="../images/av2.jpg" alt="">
                 </div>
                 <h4 class="primaryPlaylistItem-title">
                   Midnight city
@@ -320,7 +258,7 @@
               </div>
               <div class="primaryPlaylistItem">
                 <div class="primaryPlaylistItem-image">
-                  <img src="src/images/covers/midnight.jpg" alt="">
+                  <img src="../images/av1.jpg" alt="">
                 </div>
                 <h4 class="primaryPlaylistItem-title">
                   Midnight city
@@ -328,7 +266,7 @@
               </div>
               <div class="primaryPlaylistItem">
                 <div class="primaryPlaylistItem-image">
-                  <img src="src/images/covers/midnight.jpg" alt="">
+                  <img src="../images/av2.jpg" alt="">
                 </div>
                 <h4 class="primaryPlaylistItem-title">
                   Midnight city
@@ -336,7 +274,7 @@
               </div>
               <div class="primaryPlaylistItem">
                 <div class="primaryPlaylistItem-image">
-                  <img src="src/images/covers/midnight.jpg" alt="">
+                  <img src="../images/av1.jpg" alt="">
                 </div>
                 <h4 class="primaryPlaylistItem-title">
                   Midnight city
@@ -344,7 +282,7 @@
               </div>
               <div class="primaryPlaylistItem">
                 <div class="primaryPlaylistItem-image">
-                  <img src="src/images/covers/midnight.jpg" alt="">
+                  <img src="../images/av2.jpg" alt="">
                 </div>
                 <h4 class="primaryPlaylistItem-title">
                   Midnight city
@@ -352,7 +290,7 @@
               </div>
               <div class="primaryPlaylistItem">
                 <div class="primaryPlaylistItem-image">
-                  <img src="src/images/covers/midnight.jpg" alt="">
+                  <img src="../images/av1.jpg" alt="">
                 </div>
                 <h4 class="primaryPlaylistItem-title">
                   Midnight city
@@ -360,7 +298,7 @@
               </div>
               <div class="primaryPlaylistItem">
                 <div class="primaryPlaylistItem-image">
-                  <img src="src/images/covers/midnight.jpg" alt="">
+                  <img src="../images/av2.jpg" alt="">
                 </div>
                 <h4 class="primaryPlaylistItem-title">
                   Midnight city
@@ -374,7 +312,7 @@
             <div class="primaryPlaylist-list">
               <div class="primaryPlaylistItem">
                 <div class="primaryPlaylistItem-image">
-                  <img src="src/images/covers/midnight.jpg" alt="">
+                  <img src="../images/av1.jpg" alt="">
                 </div>
                 <h4 class="primaryPlaylistItem-title">
                   Midnight city
@@ -382,7 +320,7 @@
               </div>
               <div class="primaryPlaylistItem">
                 <div class="primaryPlaylistItem-image">
-                  <img src="src/images/covers/midnight.jpg" alt="">
+                  <img src="../images/av2.jpg" alt="">
                 </div>
                 <h4 class="primaryPlaylistItem-title">
                   Midnight city
@@ -390,7 +328,7 @@
               </div>
               <div class="primaryPlaylistItem">
                 <div class="primaryPlaylistItem-image">
-                  <img src="src/images/covers/midnight.jpg" alt="">
+                  <img src="../images/av1.jpg" alt="">
                 </div>
                 <h4 class="primaryPlaylistItem-title">
                   Midnight city
@@ -398,7 +336,7 @@
               </div>
               <div class="primaryPlaylistItem">
                 <div class="primaryPlaylistItem-image">
-                  <img src="src/images/covers/midnight.jpg" alt="">
+                  <img src="../images/av2.jpg" alt="">
                 </div>
                 <h4 class="primaryPlaylistItem-title">
                   Midnight city
@@ -406,7 +344,7 @@
               </div>
               <div class="primaryPlaylistItem">
                 <div class="primaryPlaylistItem-image">
-                  <img src="src/images/covers/midnight.jpg" alt="">
+                  <img src="../images/av1.jpg" alt="">
                 </div>
                 <h4 class="primaryPlaylistItem-title">
                   Midnight city
@@ -414,7 +352,7 @@
               </div>
               <div class="primaryPlaylistItem">
                 <div class="primaryPlaylistItem-image">
-                  <img src="src/images/covers/midnight.jpg" alt="">
+                  <img src="../images/av2.jpg" alt="">
                 </div>
                 <h4 class="primaryPlaylistItem-title">
                   Midnight city
@@ -422,7 +360,69 @@
               </div>
               <div class="primaryPlaylistItem">
                 <div class="primaryPlaylistItem-image">
-                  <img src="src/images/covers/midnight.jpg" alt="">
+                  <img src="../images/av1.jpg" alt="">
+                </div>
+                <h4 class="primaryPlaylistItem-title">
+                  Midnight city
+                </h4>
+              </div>
+            </div>
+          </div>
+          <div class="primaryPlaylist">
+            <h3 class="primaryPlaylist-topic">Lo mejor de la semana</h3>
+            <h2 class="primaryPlaylist-title">Destacados</h2>
+            <div class="primaryPlaylist-list">
+              <div class="primaryPlaylistItem">
+                <div class="primaryPlaylistItem-image">
+                  <img src="../images/av2.jpg" alt="">
+                </div>
+                <h4 class="primaryPlaylistItem-title">
+                  Midnight city
+                </h4>
+              </div>
+              <div class="primaryPlaylistItem">
+                <div class="primaryPlaylistItem-image">
+                  <img src="../images/av1.jpg" alt="">
+                </div>
+                <h4 class="primaryPlaylistItem-title">
+                  Midnight city
+                </h4>
+              </div>
+              <div class="primaryPlaylistItem">
+                <div class="primaryPlaylistItem-image">
+                  <img src="../images/av2.jpg" alt="">
+                </div>
+                <h4 class="primaryPlaylistItem-title">
+                  Midnight city
+                </h4>
+              </div>
+              <div class="primaryPlaylistItem">
+                <div class="primaryPlaylistItem-image">
+                  <img src="../images/av1.jpg" alt="">
+                </div>
+                <h4 class="primaryPlaylistItem-title">
+                  Midnight city
+                </h4>
+              </div>
+              <div class="primaryPlaylistItem">
+                <div class="primaryPlaylistItem-image">
+                  <img src="../images/av2.jpg" alt="">
+                </div>
+                <h4 class="primaryPlaylistItem-title">
+                  Midnight city
+                </h4>
+              </div>
+              <div class="primaryPlaylistItem">
+                <div class="primaryPlaylistItem-image">
+                  <img src="../images/av1.jpg" alt="">
+                </div>
+                <h4 class="primaryPlaylistItem-title">
+                  Midnight city
+                </h4>
+              </div>
+              <div class="primaryPlaylistItem">
+                <div class="primaryPlaylistItem-image">
+                  <img src="../images/av2.jpg" alt="">
                 </div>
                 <h4 class="primaryPlaylistItem-title">
                   Midnight city
@@ -436,7 +436,7 @@
     <div class="home-featuring">
       <div class="featuring">
         <div class="featuring-image">
-          <img src="src/images/covers/gorillaz.jpg" width="100" height="100" alt="">
+          <img src="../images/av1.jpg" width="100" height="100" alt="">
         </div>
         <div class="featuring-content">
           <p class="featuring-title">Continúa viendo</p>
