--- a/html/post2.html
+++ b/html/post2.html
@@ -15,7 +15,7 @@
           </figure>
         </div>
         <div class="sidebarPlaylist">
-          <h2 class="sidebarPlaylist-title">Mi Playlist <span class="btn warning">Escuchar Playlist</span> </h2>
+          <h2 class="sidebarPlaylist-title">Mi Playlist <span class="btn warning">Escuchar</span> </h2>
           <ol class="myPlaylist">
             <li class="myPlaylist-item">
               <a >
