--- a/html/post2.html
+++ b/html/post2.html
@@ -5,6 +5,7 @@
   <title>Platzi Video</title>
   <!-- <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet"> -->
   <link rel="stylesheet" href="../css/color2.css" />
+  <link rel="stylesheet" href="../css/Mediaqueries.css">
 </head>
 <body>
   <section class="home">
